# prtn

./: CMakeLists.txt  Makefile  a.out  ft_printf.c  ft_printf.h  ft_printf_lets_parse.c  ft_printf_libutils.c  ft_printf_utils.c  ft_putchar.c  lets_check_what_you_pars.c  main.c  txt.txt  write_char.c  write_d.c  write_i.c  write_p.c  write_percent.c  write_s.c  write_u.c  write_x.c  write_x_X.c
