cmake_minimum_required(VERSION 3.17)
project(untitled1 C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled1 main.c ft_printf.c ft_printf.h ft_printf_utils.c ft_printf_lets_parse.c lets_check_what_you_pars.c write_s.c write_percent.c write_char.c write_d.c write_i.c write_x.c write_u.c write_p.c ft_printf_libutils.c)